deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: order-service
      labels:
        app: v1
    spec:
      containers:
        - name: order-service
          image: androcksus/order-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
        - name: db
          image: postgres:17.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
      restartPolicy: Always
